# rust-path-tracer

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: scene.json
crates/lib/pathtracer/: Cargo.toml
crates/lib/pathtracer/src/: brdf.rs  brdf_lambert.rs  brdf_microfacet.rs  camera.rs  consts.rs  env.rs  import_gltf.rs  import_scene.rs  lib.rs  light.rs  material.rs  math.rs  mesh.rs  microfacet.rs  pathtracer.rs  random.rs  ray.rs  scene.rs  threadpool.rs
