[package]
name = "pathtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
kdtree-ray = "0.1.2"
cgmath = "0.18.0"
gltf = "1.0.0"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"

optick = { git = "https://github.com/bombomby/optick-rs", default-features = true }

[lib]
name = "pathtracer"
path = "src/lib.rs"
test = true
crate-type = ["lib"]

[profile.dev.package."*"]
opt-level = 3